[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Fonts/Rubik-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sprites/settings-svgrepo-com.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/arrow-back-svgrepo-com.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/arrow-back-pressed-svgrepo-com.png" type="Texture" id=4]
[ext_resource path="res://Scripts/SettingsPage.gd" type="Script" id=5]
[ext_resource path="res://Assets/Theme/Slider.tres" type="Theme" id=6]
[ext_resource path="res://Assets/Fonts/Rubik-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="Gradient" id=40]
colors = PoolColorArray( 0.00478797, 0.0475259, 0.0566406, 1, 0.00356551, 0.0460671, 0.0566406, 1 )

[sub_resource type="GradientTexture2D" id=41]
gradient = SubResource( 40 )
fill = 1
fill_from = Vector2( 0.508333, 0.471667 )

[sub_resource type="Gradient" id=25]
colors = PoolColorArray( 0.0273894, 0.186722, 0.220703, 1, 0.0343026, 0.499502, 0.615234, 1 )

[sub_resource type="GradientTexture2D" id=26]
gradient = SubResource( 25 )
fill = 1
fill_from = Vector2( 0.508333, 0.471667 )

[sub_resource type="StyleBoxEmpty" id=27]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id=46]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 5.0
content_margin_bottom = 15.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=32]
size = 24
use_filter = true
extra_spacing_space = 1
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=33]
RichTextLabel/fonts/normal_font = SubResource( 32 )

[sub_resource type="DynamicFont" id=36]
size = 31
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=44]
bg_color = Color( 0.337255, 0.337255, 0.337255, 1 )
draw_center = false
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0.521569 )

[sub_resource type="StyleBoxFlat" id=39]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 1, 1, 1, 0.0470588 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=18]
size = 18
use_filter = true
extra_spacing_space = 1
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=34]
RichTextLabel/fonts/normal_font = SubResource( 18 )

[sub_resource type="StyleBoxEmpty" id=35]

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="StyleBoxEmpty" id=38]

[sub_resource type="DynamicFont" id=47]
size = 21
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=43]
resource_name = "leftswipe"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 3.73213, 2.21914 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -200, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GradBg:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.321569, 0.321569, 1 ), Color( 0.321569, 0.321569, 0.321569, 0 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "startup"
tracks/0/type = "value"
tracks/0/path = NodePath("GradBg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1.41421, 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.321569, 0.321569, 0 ), Color( 0.321569, 0.321569, 0.321569, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1.93187, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="DarkBg" type="TextureRect" parent="."]
modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 41 )
expand = true
stretch_mode = 7

[node name="GradBg" type="TextureRect" parent="."]
modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 26 )
expand = true
stretch_mode = 7

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 27 )

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_styles/bg = SubResource( 46 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 952.0
margin_bottom = 676.0
rect_pivot_offset = Vector2( -340, -45 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 932.0
margin_bottom = 38.0
custom_constants/separation = 9

[node name="BackBtn" type="TextureButton" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
modulate = Color( 0.615686, 0.854902, 0.878431, 1 )
margin_right = 38.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Title2" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 47.0
margin_right = 885.0
margin_bottom = 38.0
size_flags_horizontal = 3
theme = SubResource( 33 )
custom_colors/default_color = Color( 0.517647, 0.87451, 1, 1 )
custom_fonts/normal_font = SubResource( 36 )
text = "Settings"
fit_content_height = true
scroll_active = false

[node name="Settings" type="TextureRect" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 894.0
margin_right = 932.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 0 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 932.0
margin_bottom = 58.0
mouse_filter = 2
custom_constants/separation = 16
custom_styles/separator = SubResource( 44 )

[node name="LayoutSettingsButton" type="PanelContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 932.0
margin_bottom = 149.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 39 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/LayoutSettingsButton"]
margin_left = 15.0
margin_top = 15.0
margin_right = 917.0
margin_bottom = 72.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/LayoutSettingsButton/VBoxContainer"]
margin_right = 902.0
margin_bottom = 30.0
mouse_filter = 2
theme = SubResource( 33 )
text = "Open Layout Settings"
fit_content_height = true
scroll_active = false

[node name="SubTitle" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/LayoutSettingsButton/VBoxContainer"]
margin_top = 34.0
margin_right = 902.0
margin_bottom = 57.0
mouse_filter = 2
theme = SubResource( 34 )
custom_colors/default_color = Color( 0.227451, 0.431373, 0.509804, 1 )
text = "Create new layouts that best suits your playstyle"
fit_content_height = true
scroll_active = false

[node name="HSeparator5" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 932.0
margin_bottom = 169.0
mouse_filter = 2
custom_constants/separation = 16
custom_styles/separator = SubResource( 35 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 932.0
margin_bottom = 230.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 852.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 852.0
margin_bottom = 30.0
mouse_filter = 1
theme = SubResource( 33 )
text = "Button Vibration"
fit_content_height = true
scroll_active = false

[node name="SubTitle" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 852.0
margin_bottom = 57.0
mouse_filter = 1
theme = SubResource( 34 )
custom_colors/default_color = Color( 0.227451, 0.431373, 0.509804, 1 )
text = "Toggles the vibration for button press"
fit_content_height = true
scroll_active = false

[node name="Vibration" type="CheckButton" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 856.0
margin_right = 932.0
margin_bottom = 57.0
custom_styles/focus = SubResource( 37 )
flat = true

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 932.0
margin_bottom = 250.0
mouse_filter = 2
custom_constants/separation = 16
custom_styles/separator = SubResource( 35 )

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 932.0
margin_bottom = 311.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 852.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 852.0
margin_bottom = 30.0
mouse_filter = 1
theme = SubResource( 33 )
text = "Button Sounds"
fit_content_height = true
scroll_active = false

[node name="SubTitle" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 34.0
margin_right = 852.0
margin_bottom = 57.0
mouse_filter = 1
theme = SubResource( 34 )
custom_colors/default_color = Color( 0.227451, 0.431373, 0.509804, 1 )
text = "Toggles the sound settings for button press"
fit_content_height = true
scroll_active = false

[node name="Sound" type="CheckButton" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 856.0
margin_right = 932.0
margin_bottom = 57.0
custom_styles/focus = SubResource( 38 )
flat = true

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 932.0
margin_bottom = 331.0
mouse_filter = 2
custom_constants/separation = 16
custom_styles/separator = SubResource( 35 )

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 932.0
margin_bottom = 392.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_right = 852.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
margin_right = 852.0
margin_bottom = 30.0
mouse_filter = 1
theme = SubResource( 33 )
text = "Passby Press"
fit_content_height = true
scroll_active = false

[node name="SubTitle" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
margin_top = 34.0
margin_right = 852.0
margin_bottom = 57.0
mouse_filter = 1
theme = SubResource( 34 )
custom_colors/default_color = Color( 0.227451, 0.431373, 0.509804, 1 )
text = "Enables Passby Press  for keys"
fit_content_height = true
scroll_active = false

[node name="PassbyPress" type="CheckButton" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 856.0
margin_right = 932.0
margin_bottom = 57.0
custom_styles/focus = SubResource( 38 )
flat = true

[node name="HSeparator6" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 932.0
margin_bottom = 412.0
mouse_filter = 2
custom_constants/separation = 16
custom_styles/separator = SubResource( 35 )

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 932.0
margin_bottom = 473.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_right = 852.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer5/VBoxContainer"]
margin_right = 852.0
margin_bottom = 30.0
mouse_filter = 1
theme = SubResource( 33 )
text = "Dynamic Right Joystick"
fit_content_height = true
scroll_active = false

[node name="SubTitle" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer5/VBoxContainer"]
margin_top = 34.0
margin_right = 852.0
margin_bottom = 57.0
mouse_filter = 1
theme = SubResource( 34 )
custom_colors/default_color = Color( 0.227451, 0.431373, 0.509804, 1 )
text = "Enables Dynamic mode for Joystick"
fit_content_height = true
scroll_active = false

[node name="DynamicJoystickR" type="CheckButton" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_left = 856.0
margin_right = 932.0
margin_bottom = 57.0
custom_styles/focus = SubResource( 38 )
flat = true

[node name="HSeparator7" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 477.0
margin_right = 932.0
margin_bottom = 493.0
mouse_filter = 2
custom_constants/separation = 16
custom_styles/separator = SubResource( 35 )

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 497.0
margin_right = 932.0
margin_bottom = 554.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_right = 852.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer6/VBoxContainer"]
margin_right = 852.0
margin_bottom = 30.0
mouse_filter = 1
theme = SubResource( 33 )
text = "Gyro Mode"
fit_content_height = true
scroll_active = false

[node name="SubTitle" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer6/VBoxContainer"]
margin_top = 34.0
margin_right = 852.0
margin_bottom = 57.0
mouse_filter = 1
theme = SubResource( 34 )
custom_colors/default_color = Color( 0.227451, 0.431373, 0.509804, 1 )
text = "Enables Gyro Settings"
fit_content_height = true
scroll_active = false

[node name="Gyro" type="CheckButton" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_left = 856.0
margin_right = 932.0
margin_bottom = 57.0
custom_styles/focus = SubResource( 38 )
flat = true

[node name="HSeparator8" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 558.0
margin_right = 932.0
margin_bottom = 574.0
mouse_filter = 2
custom_constants/separation = 16
custom_styles/separator = SubResource( 35 )

[node name="HBoxContainer7" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 578.0
margin_right = 932.0
margin_bottom = 671.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
margin_right = 932.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer7/VBoxContainer"]
margin_right = 932.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -137, -85 )
mouse_filter = 1
theme = SubResource( 33 )
text = "Gyro Sensitivity"
fit_content_height = true
scroll_active = false

[node name="SubTitle" type="RichTextLabel" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer7/VBoxContainer"]
margin_top = 34.0
margin_right = 932.0
margin_bottom = 57.0
mouse_filter = 1
theme = SubResource( 34 )
custom_colors/default_color = Color( 0.227451, 0.431373, 0.509804, 1 )
text = "Tweak sensitivity"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer7/VBoxContainer"]
margin_top = 61.0
margin_right = 932.0
margin_bottom = 93.0
custom_constants/separation = 7

[node name="GyroSensitivity" type="HSlider" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer7/VBoxContainer/HBoxContainer"]
margin_right = 912.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
min_value = 1.0
max_value = 3.0
step = 0.01
value = 1.0

[node name="Value" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer7/VBoxContainer/HBoxContainer"]
margin_left = 919.0
margin_top = 3.0
margin_right = 932.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 47 )
text = "0"
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/leftswipe = SubResource( 43 )
anims/startup = SubResource( 42 )

[connection signal="pressed" from="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer3/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="gui_input" from="PanelContainer/ScrollContainer/VBoxContainer/LayoutSettingsButton" to="." method="_on_LayoutSettingsButton_gui_input"]
[connection signal="value_changed" from="PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer7/VBoxContainer/HBoxContainer/GyroSensitivity" to="." method="_on_Sensitivity_value_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
